@@ -344,17 +344,17 @@ exit:
     return rc;
 }
 
-int rpmWriteSignature(FD_t fd, Header h)
+int rpmWriteSignature(FD_t fd, Header sigh)
 {
     static byte buf[8] = { 0, 0, 0, 0, 0, 0, 0, 0 };
     int sigSize, pad;
     int rc;
 
-    rc = headerWrite(fd, h, HEADER_MAGIC_YES);
+    rc = headerWrite(fd, sigh, HEADER_MAGIC_YES);
     if (rc)
 	return rc;
 
-    sigSize = headerSizeof(h, HEADER_MAGIC_YES);
+    sigSize = headerSizeof(sigh, HEADER_MAGIC_YES);
     pad = (8 - (sigSize % 8)) % 8;
     if (pad) {
 /*@-boundswrite@*/
@@ -368,28 +368,30 @@ int rpmWriteSignature(FD_t fd, Header h)
 
 Header rpmNewSignature(void)
 {
-    Header h = headerNew();
-    return h;
+    Header sigh = headerNew();
+    return sigh;
 }
 
-Header rpmFreeSignature(Header h)
+Header rpmFreeSignature(Header sigh)
 {
-    return headerFree(h);
+    return headerFree(sigh);
 }
 
 /**
- * Generate PGP (aka RSA/MD5) signature(s) for a header+payload file.
+ * Generate PGP signature(s) for a header+payload file.
  * @param file		header+payload file name
- * @retval pkt		signature packet(s)
- * @retval pktlen	signature packet(s) length
+ * @retval *sigTagp	signature tag
+ * @retval *pktp	signature packet(s)
+ * @retval *pktlenp	signature packet(s) length
  * @param passPhrase	private key pass phrase
  * @return		0 on success, 1 on failure
  */
-static int makePGPSignature(const char * file, /*@out@*/ byte ** pkt,
-		/*@out@*/ int_32 * pktlen, /*@null@*/ const char * passPhrase)
+static int makePGPSignature(const char * file, int_32 * sigTagp,
+		/*@out@*/ byte ** pktp, /*@out@*/ int_32 * pktlenp,
+		/*@null@*/ const char * passPhrase)
 	/*@globals errno, rpmGlobalMacroContext, h_errno,
 		fileSystem, internalState @*/
-	/*@modifies errno, *pkt, *pktlen, rpmGlobalMacroContext,
+	/*@modifies errno, *pktp, *pktlenp, rpmGlobalMacroContext,
 		fileSystem, internalState @*/
 {
     char * sigfile = alloca(1024);
@@ -398,6 +400,8 @@ static int makePGPSignature(const char * file, /*@out@*/ byte ** pkt,
     struct stat st;
     const char * cmd;
     char *const *av;
+    pgpDig dig = NULL;
+    pgpDigParams sigp = NULL;
     int rc;
 
 /*@-boundswrite@*/
@@ -482,9 +486,9 @@ static int makePGPSignature(const char * file, /*@out@*/ byte ** pkt,
     }
 
 /*@-boundswrite@*/
-    *pktlen = st.st_size;
-    rpmMessage(RPMMESS_DEBUG, _("PGP sig size: %d\n"), *pktlen);
-    *pkt = xmalloc(*pktlen);
+    *pktlenp = st.st_size;
+    rpmMessage(RPMMESS_DEBUG, _("PGP sig size: %d\n"), *pktlenp);
+    *pktp = xmalloc(*pktlenp);
 /*@=boundswrite@*/
 
 /*@-boundsread@*/
@@ -493,47 +497,61 @@ static int makePGPSignature(const char * file, /*@out@*/ byte ** pkt,
 	rc = 0;
 	fd = Fopen(sigfile, "r.fdio");
 	if (fd != NULL && !Ferror(fd)) {
-	    rc = timedRead(fd, *pkt, *pktlen);
+	    rc = timedRead(fd, *pktp, *pktlenp);
 	    if (sigfile) (void) unlink(sigfile);
 	    (void) Fclose(fd);
 	}
-	if (rc != *pktlen) {
+	if (rc != *pktlenp) {
 /*@-boundswrite@*/
-	    *pkt = _free(*pkt);
+	    *pktp = _free(*pktp);
 /*@=boundswrite@*/
 	    rpmError(RPMERR_SIGGEN, _("unable to read the signature\n"));
 	    return 1;
 	}
     }
 
-    rpmMessage(RPMMESS_DEBUG, _("Got %d bytes of PGP sig\n"), *pktlen);
+    rpmMessage(RPMMESS_DEBUG, _("Got %d bytes of PGP sig\n"), *pktlenp);
 /*@=boundsread@*/
+
+#ifdef	NOTYET
+    /* Parse the signature, change signature tag as appropriate. */
+    dig = pgpNewDig();
+
+    (void) pgpPrtPkts(*pktp, *pktlenp, dig, 1);
+    sigp = &dig->signature;
+
+    dig = pgpFreeDig(dig);
+#endif
 
     return 0;
 }
 
 /**
- * Generate GPG (aka DSA) signature(s) for a header+payload file.
+ * Generate GPG signature(s) for a header+payload file.
  * @param file		header+payload file name
- * @retval pkt		signature packet(s)
- * @retval pktlen	signature packet(s) length
+ * @retval *sigTagp	signature tag
+ * @retval *pktp	signature packet(s)
+ * @retval *pktlenp	signature packet(s) length
  * @param passPhrase	private key pass phrase
  * @return		0 on success, 1 on failure
  */
-static int makeGPGSignature(const char * file, /*@out@*/ byte ** pkt,
-		/*@out@*/ int_32 * pktlen, /*@null@*/ const char * passPhrase)
+static int makeGPGSignature(const char * file, int_32 * sigTagp,
+		/*@out@*/ byte ** pktp, /*@out@*/ int_32 * pktlenp,
+		/*@null@*/ const char * passPhrase)
 	/*@globals rpmGlobalMacroContext, h_errno,
 		fileSystem, internalState @*/
-	/*@modifies *pkt, *pktlen, rpmGlobalMacroContext,
+	/*@modifies *pktp, *pktlenp, rpmGlobalMacroContext,
 		fileSystem, internalState @*/
 {
-    char * sigfile = alloca(1024);
+    char * sigfile = alloca(strlen(file)+sizeof(".sig"));
     int pid, status;
     int inpipe[2];
     FILE * fpipe;
     struct stat st;
     const char * cmd;
     char *const *av;
+    pgpDig dig = NULL;
+    pgpDigParams sigp = NULL;
     int rc;
 
 /*@-boundswrite@*/
@@ -585,7 +603,7 @@ static int makeGPGSignature(const char * file, /*@out@*/ byte ** pkt,
 
     (void) waitpid(pid, &status, 0);
     if (!WIFEXITED(status) || WEXITSTATUS(status)) {
-	rpmError(RPMERR_SIGGEN, _("gpg failed\n"));
+	rpmError(RPMERR_SIGGEN, _("gpg exec failed (%d)\n"), WEXITSTATUS(status));
 	return 1;
     }
 
@@ -597,9 +615,9 @@ static int makeGPGSignature(const char * file, /*@out@*/ byte ** pkt,
     }
 
 /*@-boundswrite@*/
-    *pktlen = st.st_size;
-    rpmMessage(RPMMESS_DEBUG, _("GPG sig size: %d\n"), *pktlen);
-    *pkt = xmalloc(*pktlen);
+    *pktlenp = st.st_size;
+    rpmMessage(RPMMESS_DEBUG, _("GPG sig size: %d\n"), *pktlenp);
+    *pktp = xmalloc(*pktlenp);
 /*@=boundswrite@*/
 
 /*@-boundsread@*/
@@ -608,37 +626,71 @@ static int makeGPGSignature(const char * file, /*@out@*/ byte ** pkt,
 	rc = 0;
 	fd = Fopen(sigfile, "r.fdio");
 	if (fd != NULL && !Ferror(fd)) {
-	    rc = timedRead(fd, *pkt, *pktlen);
+	    rc = timedRead(fd, *pktp, *pktlenp);
 	    if (sigfile) (void) unlink(sigfile);
 	    (void) Fclose(fd);
 	}
-	if (rc != *pktlen) {
+	if (rc != *pktlenp) {
 /*@-boundswrite@*/
-	    *pkt = _free(*pkt);
+	    *pktp = _free(*pktp);
 /*@=boundswrite@*/
 	    rpmError(RPMERR_SIGGEN, _("unable to read the signature\n"));
 	    return 1;
 	}
     }
 
-    rpmMessage(RPMMESS_DEBUG, _("Got %d bytes of GPG sig\n"), *pktlen);
+    rpmMessage(RPMMESS_DEBUG, _("Got %d bytes of GPG sig\n"), *pktlenp);
 /*@=boundsread@*/
+
+    /* Parse the signature, change signature tag as appropriate. */
+    dig = pgpNewDig();
+
+    (void) pgpPrtPkts(*pktp, *pktlenp, dig, 1);
+    sigp = &dig->signature;
+
+    switch (*sigTagp) {
+    case RPMSIGTAG_SIZE:
+    case RPMSIGTAG_MD5:
+    case RPMSIGTAG_SHA1:
+	break;
+    case RPMSIGTAG_GPG:
+	/* XXX check MD5 hash too? */
+	if (sigp->pubkey_algo == PGPPUBKEYALGO_RSA)
+	    *sigTagp = RPMSIGTAG_PGP;
+	break;
+    case RPMSIGTAG_PGP5:	/* XXX legacy */
+    case RPMSIGTAG_PGP:
+	if (sigp->pubkey_algo == PGPPUBKEYALGO_DSA)
+	    *sigTagp = RPMSIGTAG_GPG;
+	break;
+    case RPMSIGTAG_DSA:
+	/* XXX check MD5 hash too? */
+	if (sigp->pubkey_algo == PGPPUBKEYALGO_RSA)
+	    *sigTagp = RPMSIGTAG_RSA;
+	break;
+    case RPMSIGTAG_RSA:
+	if (sigp->pubkey_algo == PGPPUBKEYALGO_DSA)
+	    *sigTagp = RPMSIGTAG_DSA;
+	break;
+    }
+
+    dig = pgpFreeDig(dig);
 
     return 0;
 }
 
 /**
  * Generate header only signature(s) from a header+payload file.
- * @param sig		signature header
+ * @param sigh		signature header
  * @param file		header+payload file name
  * @param sigTag	type of signature(s) to add
  * @param passPhrase	private key pass phrase
  * @return		0 on success, -1 on failure
  */
-static int makeHDRSignature(Header sig, const char * file, int_32 sigTag,
+static int makeHDRSignature(Header sigh, const char * file, int_32 sigTag,
 		/*@null@*/ const char * passPhrase)
 	/*@globals rpmGlobalMacroContext, h_errno, fileSystem, internalState @*/
-	/*@modifies sig, rpmGlobalMacroContext, fileSystem, internalState @*/
+	/*@modifies sigh, rpmGlobalMacroContext, fileSystem, internalState @*/
 {
     Header h = NULL;
     FD_t fd = NULL;
@@ -686,7 +738,7 @@ static int makeHDRSignature(Header sig, const char * file, int_32 sigTag,
 
 	if (SHA1 == NULL)
 	    goto exit;
-	if (!headerAddEntry(sig, RPMSIGTAG_SHA1, RPM_STRING_TYPE, SHA1, 1))
+	if (!headerAddEntry(sigh, RPMSIGTAG_SHA1, RPM_STRING_TYPE, SHA1, 1))
 	    goto exit;
 	ret = 0;
 	break;
@@ -703,8 +755,8 @@ static int makeHDRSignature(Header sig, const char * file, int_32 sigTag,
 	if (headerWrite(fd, h, HEADER_MAGIC_YES))
 	    goto exit;
 	(void) Fclose(fd);	fd = NULL;
-	if (makeGPGSignature(fn, &pkt, &pktlen, passPhrase)
-	 || !headerAddEntry(sig, sigTag, RPM_BIN_TYPE, pkt, pktlen))
+	if (makeGPGSignature(fn, &sigTag, &pkt, &pktlen, passPhrase)
+	 || !headerAddEntry(sigh, sigTag, RPM_BIN_TYPE, pkt, pktlen))
 	    goto exit;
 	ret = 0;
 	break;
@@ -721,8 +773,8 @@ static int makeHDRSignature(Header sig, const char * file, int_32 sigTag,
 	if (headerWrite(fd, h, HEADER_MAGIC_YES))
 	    goto exit;
 	(void) Fclose(fd);	fd = NULL;
-	if (makePGPSignature(fn, &pkt, &pktlen, passPhrase)
-	 || !headerAddEntry(sig, sigTag, RPM_BIN_TYPE, pkt, pktlen))
+	if (makePGPSignature(fn, &sigTag, &pkt, &pktlen, passPhrase)
+	 || !headerAddEntry(sigh, sigTag, RPM_BIN_TYPE, pkt, pktlen))
 	    goto exit;
 	ret = 0;
 	break;
@@ -739,7 +791,7 @@ exit:
     return ret;
 }
 
-int rpmAddSignature(Header sig, const char * file, int_32 sigTag,
+int rpmAddSignature(Header sigh, const char * file, int_32 sigTag,
 		const char * passPhrase)
 {
     struct stat st;
@@ -752,7 +804,7 @@ int rpmAddSignature(Header sig, const char * file, int_32 sigTag,
 	if (stat(file, &st) != 0)
 	    break;
 	pktlen = st.st_size;
-	if (!headerAddEntry(sig, sigTag, RPM_INT32_TYPE, &pktlen, 1))
+	if (!headerAddEntry(sigh, sigTag, RPM_INT32_TYPE, &pktlen, 1))
 	    break;
 	ret = 0;
 	break;
@@ -760,32 +812,32 @@ int rpmAddSignature(Header sig, const char * file, int_32 sigTag,
 	pktlen = 16;
 	pkt = memset(alloca(pktlen), 0, pktlen);
 	if (domd5(file, pkt, 0, NULL)
-	 || !headerAddEntry(sig, sigTag, RPM_BIN_TYPE, pkt, pktlen))
+	 || !headerAddEntry(sigh, sigTag, RPM_BIN_TYPE, pkt, pktlen))
 	    break;
 	ret = 0;
 	break;
     case RPMSIGTAG_PGP5:	/* XXX legacy */
     case RPMSIGTAG_PGP:
-	if (makePGPSignature(file, &pkt, &pktlen, passPhrase)
-	 || !headerAddEntry(sig, sigTag, RPM_BIN_TYPE, pkt, pktlen))
+	if (makePGPSignature(file, &sigTag, &pkt, &pktlen, passPhrase)
+	 || !headerAddEntry(sigh, sigTag, RPM_BIN_TYPE, pkt, pktlen))
 	    break;
 #ifdef	NOTYET	/* XXX needs hdrmd5ctx, like hdrsha1ctx. */
 	/* XXX Piggyback a header-only RSA signature as well. */
-	ret = makeHDRSignature(sig, file, RPMSIGTAG_RSA, passPhrase);
+	ret = makeHDRSignature(sigh, file, RPMSIGTAG_RSA, passPhrase);
 #endif
 	ret = 0;
 	break;
     case RPMSIGTAG_GPG:
-	if (makeGPGSignature(file, &pkt, &pktlen, passPhrase)
-	 || !headerAddEntry(sig, sigTag, RPM_BIN_TYPE, pkt, pktlen))
+	if (makeGPGSignature(file, &sigTag, &pkt, &pktlen, passPhrase)
+	 || !headerAddEntry(sigh, sigTag, RPM_BIN_TYPE, pkt, pktlen))
 	    break;
 	/* XXX Piggyback a header-only DSA signature as well. */
-	ret = makeHDRSignature(sig, file, RPMSIGTAG_DSA, passPhrase);
+	ret = makeHDRSignature(sigh, file, RPMSIGTAG_DSA, passPhrase);
 	break;
     case RPMSIGTAG_RSA:
     case RPMSIGTAG_DSA:
     case RPMSIGTAG_SHA1:
-	ret = makeHDRSignature(sig, file, sigTag, passPhrase);
+	ret = makeHDRSignature(sigh, file, sigTag, passPhrase);
 	break;
     }
 
@@ -1171,7 +1223,7 @@ verifyRSASignature(rpmts ts, /*@out@*/ char * t,
     /* Verify the desired signature match. */
     switch (sigp->pubkey_algo) {
     case PGPPUBKEYALGO_RSA:
-	if (sigtag == RPMSIGTAG_PGP)
+	if (sigtag == RPMSIGTAG_PGP || sigtag == RPMSIGTAG_PGP5 || sigtag == RPMSIGTAG_RSA)
 	    break;
 	/*@fallthrough@*/
     default:
