@@ -8,6 +8,8 @@
 	- remove remnant -I/opt/local hacks, --prefix=/usr is recommended.
 	- rework configure.ac et al to lose internal library baggage flexibly.
 	- updated sv.po <goeran@uddrborg.se>.
+	- permit gpg to be used for RSA/MD5 signatures.
+	- permit RSA key sizes larger than 1024 bits.
 
 4.4 -> 4.4.1:
 	- force *.py->*.pyo byte code compilation with brp-python-bytecompile.
